<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMission">

    <ImageView
        android:id="@+id/activity_mission_img_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_background" />
    
    <!-- NAV HEADER -->

    <fragment
        android:id="@+id/activity_mission_header"
        android:name="pl.marekcel.fsg.FragmentHeader"
        tools:layout="@layout/fragment_header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:scaleType="centerInside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_mission_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:id="@+id/activity_mission_sv_introduction"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/fsg_highlight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/activity_mission_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin_half">

                <TableRow
                    android:id="@+id/activity_mission_tr_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/activity_mission_tv_name"
                        style="@style/fsg_text_caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:ellipsize="none"
                        android:scrollHorizontally="false"
                        android:layout_weight="1"
                        tools:text="Mission Name" />
                </TableRow>

                <TableRow
                    android:id="@+id/activity_mission_tr_introduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/activity_mission_tv_introduction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="none"
                        android:scrollHorizontally="false"
                        android:layout_weight="1"
                        tools:text="Mission Info" />
                </TableRow>

                <TableRow
                    android:id="@+id/activity_mission_tr_dummy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:text="" />
                </TableRow>
            </TableLayout>

        </ScrollView>

        <android.support.constraint.Guideline
            android:id="@+id/activity_mission_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ScrollView
            android:id="@+id/activity_mission_scrollViewStatistics"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin_half"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/fsg_highlight"
            app:layout_constraintBottom_toTopOf="@+id/activity_mission_btn_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/activity_mission_guideline"
            app:layout_constraintTop_toTopOf="parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/activity_mission_tv_total_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:text="@string/mission_summary_time" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/activity_mission_tv_friends_destroyed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:text="@string/mission_summary_friends_destroyed" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/activity_mission_tv_enemies_destroyed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:text="@string/mission_summary_enemies_destroyed" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/activity_mission_tv_ownship_destroyed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:text="@string/mission_summary_ownship_destroyed" />
                </TableRow>
            </TableLayout>
        </ScrollView>

        <ImageView
            android:id="@+id/activity_mission_img_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin_half"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:adjustViewBounds="true"
            android:background="@drawable/fsg_border"
            android:cropToPadding="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/activity_mission_btn_action"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/activity_mission_guideline"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/activity_mission_btn_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="onButtonStartMissionClicked"
            android:text="@string/mission_start"
            style="@style/fsg_button"
            android:layout_marginStart="@dimen/activity_horizontal_margin_half"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/activity_mission_guideline" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
